--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "ext-curl": "*"
     },
     "require-dev": {
-        "phing/phing": "~2.8",
+        "symfony/console": "2.5.*",
         "symfony/finder": "2.5.*"
     },
     "autoload": {
