--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     ],
     "require": {
         "php": ">=5.6",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "fkooman/php-oauth-client": "dev-master",
+        "league/oauth2-client": "~0.3"
     },
     "require-dev": {
         "symfony/console": "2.5.*",
