--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
     "require": {
         "php": ">=5.6",
         "ext-curl": "*",
-        "fkooman/php-oauth-client": "dev-master",
-        "league/oauth2-client": "~0.3"
+        "guzzlehttp/guzzle": "~4.2",
+        "guzzlehttp/oauth-subscriber": "0.1.*",
+        "guzzlehttp/log-subscriber": "~1.0"
     },
     "require-dev": {
         "symfony/console": "2.5.*",
