--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,16 @@
     ],
     "require": {
         "php": ">=5.6",
-        "ext-curl": "*",
-        "guzzlehttp/guzzle": "~4.2",
-        "guzzlehttp/oauth-subscriber": "0.1.*",
-        "facebook/php-sdk-v4": "4.0.*",
-        "guzzlehttp/log-subscriber": "~1.0"
+        "apishka/easy-extend": "~1.0.0",
+        "guzzlehttp/guzzle": "~5.0",
+        "guzzlehttp/oauth-subscriber": "0.2.*",
+        "commerceguys/guzzle-oauth2-plugin": "~2.0",
+        "facebook/php-sdk-v4": "4.0.*"
     },
     "require-dev": {
-        "symfony/console": "2.5.*",
-        "symfony/finder": "2.5.*"
+        "apishka/cs": "~1.0.0",
+        "symfony/console": "~2.7.0",
+        "symfony/finder": "~2.7.0"
     },
     "autoload": {
         "psr-0": {
