--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "apishka/easy-extend": "^1.2.5",
         "guzzlehttp/guzzle": "~6.0",
         "guzzlehttp/oauth-subscriber": "0.3.*",
-        "facebook/php-sdk-v4": "^5.0.0"
+        "facebook/graph-sdk": "^5.3"
     },
     "require-dev": {
         "apishka/cs": "~1.0.0",
