--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.6",
-        "apishka/easy-extend": "^1.2.5",
+        "apishka/easy-extend": "^1.2 || ^2.0",
         "guzzlehttp/guzzle": "~6.0",
         "guzzlehttp/oauth-subscriber": "0.3.*",
         "facebook/graph-sdk": "^5.3"
